CSS fix horiz. scroll bar visibility in Schedules.

--- a/httpdocs/sites/all/themes/custom/ui_toolkit/less/style.less
+++ b/httpdocs/sites/all/themes/custom/ui_toolkit/less/style.less
@@ -347,7 +347,7 @@ li.submenu-item {
 /* Schedule (Calendar) */
 .schedule_11x {
   .panels-flexible-row-first {
-    height: 1480px;
+    height: 1490px;
     overflow: hidden;
   }
   .panels-flexible-row-last {
@@ -381,6 +381,8 @@ li.submenu-item {
 
       .inside {
         width: 2100px;
+        height: 1475px;
+        overflow: hidden;
       }
 
       table.full {
